# Rust-API-Service

./: .env  Cargo.toml  create.sql
src/: api_without_db.rs  auth.rs  file_server.rs  greetings_with_auth.rs  greetings_with_db.rs  main.rs
